# research-track-2-a1

./: README.md  pioneerROS.ttt  ros.sh  ros12.sh  ros2.sh  rt2a1a.sh  rt2a1b.sh
rt2_assignment1/: CMakeLists.txt  package.xml
rt2_assignment1/action/: Position.action
rt2_assignment1/launch/: sim.launch  sim_ros2_bridge.launch  sim_vrep.launch
rt2_assignment1/scripts/: go_to_point_action.py  go_to_point_vrep.py  user_interface.py
rt2_assignment1/src/: controller_vrep.cpp  state_machine.cpp
rt2a1_ros2/: CMakeLists.txt  my_mapping_rules.yaml  package.xml
rt2a1_ros2/launch/: all_launch.py  ros2_launch.py
rt2a1_ros2/src/: client.cpp  listener.cpp  position_server.cpp  server.cpp  state_machine.cpp  talker.cpp
